--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,8 @@
-时间序列展示
+<h1>时间序列展示<h1>
 <form action="http://localhost:5000/result"“ method="POST">
     <p>start time: <input type = "int" name = "start" />
       end time:  <input type = "int" name = "end" />
-    <span class="font02">  数据源: </span>
+    <span class="font02">   数据源:  </span>
     <select Name = "chose">
         <option value="list1">列表1</option>
         <option value="list2">列表5</option>
@@ -17,5 +17,9 @@
         <option value="list1">列表1</option>
         <option value="list2">列表5</option>
     </select><p>
-      <input type = "submit" value = "submit" /></p>
+      <input type = "submit" value = "绘图" /></p>
   </form>
+
+    <h3>其中列表一的时间戳范围为1469376000-1472010900<h3>
+    <h3>其中列表五的时间戳范围为1472918400-1475553300<h3>
+    <h3>每个时间戳之间间隔为300<h3>
